# exact

./: .gitignore  CMakeLists.txt  P2P_DESIGN.md  P2P_IMPLEMENTATION_COMPLETE.md
client/: CMakeLists.txt
common/: files.cxx
datasets/stock/: SPY.csv  SPY_test.csv
examm/: examm.cxx  examm.hxx  island_speciation_strategy.hxx  speciation_strategy.hxx
examm_p2p/: p2p_main.cxx
mpi/: CMakeLists.txt  examm_mpi.cxx  test_examm_mpi_p2p_helpers.cxx
p2p/: CMakeLists.txt  examm_p2p.cxx  p2p_comm.cxx  p2p_comm.hxx  p2p_examm.cxx  p2p_examm.hxx  p2p_island_strategy.cxx  p2p_island_strategy.hxx  p2p_tags.hxx  peer_ring.cxx  peer_ring.hxx  replica_store.cxx  replica_store.hxx
rnn_tests/: CMakeLists.txt  test_examm_inject_migrated_genome.cxx
scripts/: compute_metrics.py  plot_fitness_evolution.py  simple_plot_fitness.py
scripts/base_run/: c172_p2p.sh
